updated readme and comments

--- a/Todo.API/appsettings.json
+++ b/Todo.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureSQL": "SERVER=.database.windows.net;DATABASE=;UID=;PWD=;"    
+  }
 }
